; ModuleID = '/home/carl/AnghaBench/qmk_firmware/quantum/process_keycode/extr_process_unicodemap.c_unicodemap_index.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/quantum/process_keycode/extr_process_unicodemap.c_unicodemap_index.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@QK_UNICODEMAP_PAIR = common dso_local global i64 0, align 8
@unicode_saved_mods = common dso_local global i32 0, align 4
@MOD_MASK_SHIFT = common dso_local global i32 0, align 4
@USB_LED_CAPS_LOCK = common dso_local global i32 0, align 4
@QK_UNICODEMAP = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define weak dso_local i64 @unicodemap_index(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i64 %0, i64* %3, align 8
  %7 = load i64, i64* %3, align 8
  %8 = load i64, i64* @QK_UNICODEMAP_PAIR, align 8
  %9 = icmp sge i64 %7, %8
  br i1 %9, label %10, label %29

10:                                               ; preds = %1
  %11 = load i64, i64* %3, align 8
  %12 = load i64, i64* @QK_UNICODEMAP_PAIR, align 8
  %13 = sub nsw i64 %11, %12
  store i64 %13, i64* %4, align 8
  %14 = load i32, i32* @unicode_saved_mods, align 4
  %15 = load i32, i32* @MOD_MASK_SHIFT, align 4
  %16 = and i32 %14, %15
  store i32 %16, i32* %5, align 4
  %17 = load i32, i32* @USB_LED_CAPS_LOCK, align 4
  %18 = call i32 @IS_HOST_LED_ON(i32 %17)
  store i32 %18, i32* %6, align 4
  %19 = load i32, i32* %5, align 4
  %20 = load i32, i32* %6, align 4
  %21 = xor i32 %19, %20
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %23, label %26

23:                                               ; preds = %10
  %24 = load i64, i64* %4, align 8
  %25 = ashr i64 %24, 7
  store i64 %25, i64* %4, align 8
  br label %26

26:                                               ; preds = %23, %10
  %27 = load i64, i64* %4, align 8
  %28 = and i64 %27, 127
  store i64 %28, i64* %2, align 8
  br label %33

29:                                               ; preds = %1
  %30 = load i64, i64* %3, align 8
  %31 = load i64, i64* @QK_UNICODEMAP, align 8
  %32 = sub nsw i64 %30, %31
  store i64 %32, i64* %2, align 8
  br label %33

33:                                               ; preds = %29, %26
  %34 = load i64, i64* %2, align 8
  ret i64 %34
}

declare dso_local i32 @IS_HOST_LED_ON(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
